# submissions-flat2

./: .gitattributes  4090-git-repos.txt  4090_track_submissions.tsv  A100-git-repos.txt  A100_track_submissions.tsv  README.md  clean.sh  clone.sh  sanity-check.sh  unknown_track_submission.tsv
A100/godatadriven/neurips-llm-efficiency-challenge/: .pre-commit-config.yaml  .terraform-docs.yml  Dockerfile  README.md  evaluation.Dockerfile  helm.Dockerfile  mkdocs.yml  mlflow.Dockerfile  open_api_spec.json  pyproject.toml  tasks.py  training.Dockerfile
A100/godatadriven/neurips-llm-efficiency-challenge/.data/: config.yml  version.yml
A100/godatadriven/neurips-llm-efficiency-challenge/docs/: cajajejo.md  data_versioning.md  helm_local_models.md  infrastructure.md  jobs.md  setting_up_compute.md  usage.ipynb
A100/godatadriven/neurips-llm-efficiency-challenge/excalidraw/: infra.excalidraw  workflow.excalidraw
A100/godatadriven/neurips-llm-efficiency-challenge/infra/: README.md  iam.tf  main.tf  networking.tf  outputs.tf  providers.tf  secrets.tf  tasks.py  variables.tf
A100/godatadriven/neurips-llm-efficiency-challenge/infra/modules/cloud_storage/: README.md  main.tf  outputs.tf
A100/godatadriven/neurips-llm-efficiency-challenge/infra/modules/compute/: README.md  main.tf  outputs.tf  variables.tf
A100/godatadriven/neurips-llm-efficiency-challenge/infra/modules/compute_configure/: README.md  main.tf  outputs.tf  variables.tf
A100/godatadriven/neurips-llm-efficiency-challenge/infra/modules/docker_artifact_store/: README.md  main.tf  outputs.tf  variables.tf
A100/godatadriven/neurips-llm-efficiency-challenge/infra/modules/kubernetes/: README.md  iam.tf  main.tf  network.tf  outputs.tf  variables.tf
A100/godatadriven/neurips-llm-efficiency-challenge/infra/modules/mlflow/: README.md  main.tf  outputs.tf  variables.tf
A100/godatadriven/neurips-llm-efficiency-challenge/infra/modules/pypi_artifact_store/: README.md  main.tf  outputs.tf
A100/godatadriven/neurips-llm-efficiency-challenge/infra/modules/services/: README.md  main.tf
A100/godatadriven/neurips-llm-efficiency-challenge/infra/modules/sql/: README.md  main.tf  outputs.tf  variables.tf
A100/godatadriven/neurips-llm-efficiency-challenge/infra/vars/: prod.tfvars
A100/godatadriven/neurips-llm-efficiency-challenge/jobs/: README.md
A100/godatadriven/neurips-llm-efficiency-challenge/jobs/evaluation/: debug.conf  example.mlflow.job_config.yml  mistral_base_A100_inference.job_config.yml  mistral_ft_A100_inference.job_config.yml  neurips_run_specs.conf  neurips_run_specs_minimal.conf  pythia160m_T4_inference.job_config.yml  todo.txt
A100/godatadriven/neurips-llm-efficiency-challenge/jobs/evaluation/legacy/: core-slim.run_specs.conf  core.run_specs.conf  full.run_specs.conf  (+1 more)
A100/godatadriven/neurips-llm-efficiency-challenge/jobs/training/: debug.yml  llama13b_A100.job_config.yml  llama30b_A100.job_config.yml  llama7b_A100.job_config.yml  mistral7b_4090.job_config.yml  mistral7b_A100.job_config.yml  opt1b_T4.job_config.yml  persimmon8b_A100.job_config.yml  pythia160m_T4.job_config.yml
A100/godatadriven/neurips-llm-efficiency-challenge/src/cajajejo/: __init__.py  cli.py  config.py  logging.py  utils.py
A100/godatadriven/neurips-llm-efficiency-challenge/submission/: inference.yml  requirements.txt
A100/godatadriven/neurips-llm-efficiency-challenge/tests/: conftest.py  test_cli_tmp.py  test_config.py  test_utils.py
A100/godatadriven/neurips-llm-efficiency-challenge/workbench/: biased_samples.ipynb  eval_helm_out.ipynb  flashattn.ipynb  merge_weights.ipynb  query_api.ipynb  trainer.ipynb
A100/godatadriven/neurips-llm-efficiency-challenge/workbench/data/: 00_process_helm_datasets.ipynb  00_process_other_datasets.ipynb  00_process_platypus_datasets.ipynb  01_merge_datasets.ipynb  02_visualize_dataset.ipynb  03_visualize_dataset_rens.ipynb  dowload_helm_data.ipynb
A100/godatadriven/neurips-llm-efficiency-challenge/workbench/python_tool_experiments/: gc_logging.py  mlflow_api.py  mlflow_huggingface_integration.ipynb  trainer.ipynb
A100/godatadriven/neurips-llm-efficiency-challenge/xke/: plotz.ipynb
(+545 files in other folders)
